--- a/templates/user.xml
+++ b/templates/user.xml
@@ -182,4 +182,9 @@
       <option name="PHP Expression" value="true" />
     </context>
   </template>
+  <template name="&lt;script_handlebars" value="&lt;script id=&quot;template&quot; type=&quot;text/x-handlebars-template&quot;&gt;&#10;&lt;/script&gt;" description="handlebars template script tag" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="HTML_TEXT" value="true" />
+    </context>
+  </template>
 </templateSet>
