--- a/templates/user.xml
+++ b/templates/user.xml
@@ -123,7 +123,8 @@
       <option name="PHP Statement" value="true" />
     </context>
   </template>
-  <template name="&lt;? if()" value="&lt;? if(){?&gt;&#10;                        &#10;                    &lt;? } ?&gt;" description="php if injection to html" toReformat="true" toShortenFQNames="true">
+  <template name="&lt;? if(" value="&lt;? if($COND$){?&gt;&#10;                        &#10;                    &lt;? } ?&gt;" description="php if injection to html" toReformat="true" toShortenFQNames="true">
+    <variable name="COND" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="HTML" value="true" />
       <option name="PHP" value="true" />
